# rabbitmq_rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
config/: Development.toml
rabbitmq/etc/: rabbitmq.conf
src/: app_state.rs  config.rs  lib.rs  main.rs  rabbitmq_connection.rs
