[package]
name = "rabbitmq_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.1.1"
tokio = { version = "1.13.1", features = ["full"] }
config = "0.11"
slog = "2.7.0"
lazy_static = "1.4"
slog-term = "2.8.0"
slog-async = "2.7.0"
slog-json = "2.4.0"
serde_json = "1.0"
serde = {version="1.0.136", features = ["derive"]}
validator = { version = "0.14", features = ["derive"] }